# NeNeRobo

./: .gitignore  README.md  main.py  pyproject.toml
db/: schema.prisma
local/: .gitignore  __init__.py
modules/: friend.py
modules/doc_search/: __init__.py  process.py  render.py  service.py
modules/github/: __init__.py  auth.py  render.py  service.py
modules/github/renderer/: __init__.py  filters.py  globals.py  render.py
modules/pep/: __init__.py  render.py
