[project]
name = "NeNeRobo"
version = "0.1.0"
description = ""
authors = [
    {name = "BlueGlassBlock", email = "blueglassblock@outlook.com"},
]
dependencies = [
    "graia-ariadne[standard]<0.11.0,>=0.9.4",
    "kayaku>=0.5.0rc5",
    "githubkit[auth-oauth-device]~=0.8.5",
    "graiax-playwright>=0.2.0.post1",
    "rich>=12.5.1",
    "jinja2>=3.1.2",
    "mdit-py-emoji>=0.1.0",
    "humanize>=4.4.0",
    "unidiff>=0.7.4",
    "markdown-it-py[linkify,plugins]>=2.1.0",
    "msgspec>=0.9.0",
    "graiax-shortcut>=0.1.0",
]
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.8.0",
    "isort>=5.10.1",
    "lark[regex]>=1.1.2",
]
